fix overflow

--- a/src/app/contracts/contracts-list/contracts-list.component.scss
+++ b/src/app/contracts/contracts-list/contracts-list.component.scss
@@ -1,3 +1,11 @@
+:host {
+  overflow: scroll;
+}
+
+.list-row {
+  overflow: scroll;
+}
+
 .contract {
   overflow: hidden;
   background: #F2F2F2;
@@ -40,6 +48,10 @@
     &.approved{
       color: green
     }
+  }
+
+  &:last-child {
+    margin-bottom: 20px;
   }
 }
 
